kubernetes/routes/route-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: '8080'
  wildcardPolicy: None
