kubernetes/routes/route-frontend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: '4200'
  wildcardPolicy: None
